bugfixes: faqs alignemt

--- a/src/FAQ/faq.scss
+++ b/src/FAQ/faq.scss
@@ -13,19 +13,10 @@
     position: relative;
     // margin-top: calc(134px + 80px);
     // margin-bottom: 140px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     z-index: 1;
     padding: 12% 15% 5% 15%;
     background: #f1f1f1;
@@ -51,11 +42,8 @@
         background: #fff;
         border-radius: 4px;
         border: 1px solid #dddbda;
-        padding: 20px 10px;
-        //position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        // padding: 20px 10px;
+        position: relative;
 
         label {
           font-weight: 600;
@@ -65,11 +53,11 @@
           //top: 0px;
         }
 
-        .icon{
-          // position: absolute;
-          // right: 10px;
-          // transform: translateY(-50%);
-          // top: 50%;
+        span {
+          position: absolute;
+          right: 20px;
+          transform: translateY(-50%);
+          top: 50%;
         }
 
         // .hide {
@@ -82,8 +70,10 @@
       .accordian-item__body {
         border-radius: 4px;
         background: #fff;
-        // padding: 20px 10px;
-        // display: none;
+        p {
+          letter-spacing: 0.5px;
+          color: #000000;
+        }
       }
     }
   } 
