--- a/src/components/accordian/accordian.scss
+++ b/src/components/accordian/accordian.scss
@@ -44,12 +44,12 @@
   transition: background-color 0.2s ease-in;
   cursor: pointer;
   width: 100%;
-  height: 50px;
+  // height: 50px;
   background-color: #fff;
-  padding: 0 20px;
-  label {
+  padding: 20px 20px;
+  p {
     pointer-events: none;
-    line-height: 50px;
+    max-width: 90%;
   }
   .os.s7 {
     font-weight: bold;
